kubernetes/sqlite-ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sgs-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sgs-app
  template:
    metadata:
      labels:
        app: sgs-app
    spec:
      imagePullSecrets:
        - name: my-dockerhub-secret
      containers:
        - name: sgs-app
          image: skylineglobe/skylineglobeserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5155
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
            - name: data-volume
              mountPath: /app/data	      
            # -----------------------------------------------------
            # Option 1: Mount a subfolder (keeps the original /app/tef/custom contents)                 
            # -----------------------------------------------------
            #- name: more-data-volume
            #  mountPath: /app/tef/custom/more-data	      
            # -----------------------------------------------------
            # Option 2: Mount a single file (adds/replaces one file).
            # The "readOnly: true" field is the equivalent of ":ro" in Docker.
            # -----------------------------------------------------
            #- name: custom-file-volume
            #  mountPath: /app/tef/custom/my-config.json
            #  subPath: my-config.json
            #  readOnly: true          
      volumes:
        - name: config-volume
          hostPath:
            path: "/run/desktop/mnt/host/c/sgs/config"
        - name: data-volume
          hostPath:
            path: "/run/desktop/mnt/host/c/sgs/data"	    
        # -----------------------------------------------------
        # Option 1: Host folder to mount as a subfolder inside the container
        # -----------------------------------------------------
        #- name: more-data-volume
        #  hostPath:
        #    path: "/run/desktop/mnt/host/c/sgs/more-data"
        # -----------------------------------------------------
        # Option 2: Host file to mount as read-only
        # -----------------------------------------------------
        #- name: custom-file-volume
        #  hostPath:
        #    path: "/run/desktop/mnt/host/c/sgs/custom/myconfig.json"
